--- a/ourbooks/templates/reader-home.html
+++ b/ourbooks/templates/reader-home.html
@@ -4,5 +4,5 @@
 <link rel="stylesheet" type="text/css" href="{% static 'ourbooks/header.css' %}">
 
 {% block content%}
-<a href="{% url 'signup_editorial' %}">Signup for editorials</a>
+<h1>HOla</h1>
 {% endblock %}
