--- a/ourbooks/templates/registration/signup-editorial.html
+++ b/ourbooks/templates/registration/signup-editorial.html
@@ -8,7 +8,8 @@
 	<form class="signup" method="POST">
 			<div>
 				{% csrf_token %}
-				{{ form.as_p }}
+				{{ editorial_form.as_p }}
+				{{ user_form.as_p }}
 				<input type="submit" value="Signup"/>
 			</div>
 	</form>
