--- a/readers/templates/readers/reader-home.html
+++ b/readers/templates/readers/reader-home.html
@@ -4,5 +4,8 @@
 <link rel="stylesheet" type="text/css" href="{% static 'ourbooks/header.css' %}">
 
 {% block content%}
-<h1>HOla</h1>
+<a>My books</a>
+<a>My reviews</a>
+<a>Profile</a>
+<h1>Hi {{ reader.username }}!</h1>
 {% endblock %}
