--- a/readers/templates/readers/book-view.html
+++ b/readers/templates/readers/book-view.html
@@ -3,15 +3,18 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'readers/reader-home.css' %}">
 
+
 {% block content %}
 <a>My books</a>
 <a>My reviews</a>
 <a>Profile</a>
+<script src="{% static 'readers/js/confirm_purchase.js' %}"></script>
 
 <div class="books-container">
         <div class="book-item">
             <img src="{{ book.image_url }}" alt="{{ book.book_name }}" width="200" height="300">
             <p>{{ book.book_name }} - {{ book.description }}</p>
+            <button id="myButton">Comprar</button>
         </div>
 </div>
 
