--- a/readers/templates/readers/reader-home.html
+++ b/readers/templates/readers/reader-home.html
@@ -1,12 +1,9 @@
-{% extends "header.html" %}
+{% extends "reader-header.html" %}
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'readers/reader-home.css' %}">
 
 {% block content %}
-<a>My books</a>
-<a>My reviews</a>
-<a href="{% url 'profile_view' %}">Profile</a>
 <h1>Hi {{ reader.username }}!</h1>
 <p> What's new? </p>
 
