new header template for readers

--- a/readers/templates/readers/book-view.html
+++ b/readers/templates/readers/book-view.html
@@ -1,4 +1,4 @@
-{% extends "reader-header.html" %}
+{% extends "readers/reader-header.html" %}
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'readers/reader-home.css' %}">
