--- a/readers/templates/readers/reader-header.html
+++ b/readers/templates/readers/reader-header.html
@@ -2,8 +2,12 @@
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'readers/reader-home.css' %}">
-
-{% block content %}
+{% block head %}
 <a>My books</a>
 <a>My reviews</a>
 <a href="{% url 'profile_view' %}">Profile</a>
+<a>Logout</a>
+{% endblock %}
+
+{% block content %}
+{% endblock %}
