--- a/ourbooks/templates/header.html
+++ b/ourbooks/templates/header.html
@@ -7,6 +7,7 @@
     <h1 class="header-title">OurBooks</h1>
   </div>
 </div>
-
+{% block head %}
+{% endblock %}
 {% block content%}
 {% endblock %}
