--- a/readers/templates/readers/reader-header.html
+++ b/readers/templates/readers/reader-header.html
@@ -7,6 +7,7 @@
 <a href="{% url 'my_books' %}">My books</a>
 <a>My reviews</a>
 <a href="{% url 'profile_view' %}">Profile</a>
+<a href="{% url 'logout' %}">Logout</a>
 {% endblock %}
 
 {% block content %}
