--- a/readers/templates/readers/reader-header.html
+++ b/readers/templates/readers/reader-header.html
@@ -6,7 +6,7 @@
 <a href="{% url 'reader_home' %}">Home</a>
 <a href="{% url 'my_books' %}">My books</a>
 <a href="{% url 'shared_with_me' %}">Shared with me</a>
-<a>My reviews</a>
+<a href="{% url 'my-reviews' %}">My Reviews</a>
 <a href="{% url 'profile_view' %}">Profile</a>
 <a href="{% url 'logout' %}">Logout</a>
 {% endblock %}
