my_reviews update
added pagination, delete_review and edit_review feature

--- a/readers/templates/readers/delete_review.html
+++ b/readers/templates/readers/delete_review.html
@@ -9,6 +9,6 @@
         {% csrf_token %}
         <input type="submit" value="Eliminar">
     </form>
-    <a href="{% url 'my-reviews/' %}">Cancelar</a>
+    <a href="{% url 'my-reviews' %}">Cancelar</a>
 </body>
 </html>
