--- a/readers/templates/readers/edit_review.html
+++ b/readers/templates/readers/edit_review.html
@@ -9,5 +9,6 @@
         {{ form.as_p }}
         <input type="submit" value="Guardar Cambios">
     </form>
+    <a href="{% url 'my-reviews' %}">Cancelar</a>
 </body>
 </html>
