--- a/ourbooks/templates/index.html
+++ b/ourbooks/templates/index.html
@@ -5,4 +5,6 @@
 
 {% block content%}
 <a href="{% url 'signup_editorial' %}">Signup for editorials</a>
+<a href="{% url 'signup_reader' %}">Signup for readers</a>
+<a href="{% url 'login' %}">Login</a>
 {% endblock %}
