--- a/readers/templates/readers/reader-books.html
+++ b/readers/templates/readers/reader-books.html
@@ -4,18 +4,24 @@
 <link rel="stylesheet" type="text/css" href="{% static 'readers/reader-home.css' %}">
 
 {% block content %}
+<link rel="stylesheet" type="text/css" href="{% static 'readers/reader-books.css' %}">
 <script src="{% static 'readers/js/confirm_share.js' %}"></script>
 
-<div class="books-container">
+<div class="BookSection">
     {% csrf_token %}
     {% for purchase in Purchases %}
-        <div class="book-item">
-            <img src="{{ purchase.book.image_url }}" alt="{{ purchase.book.book_name }}" width="200" height="300">
-            <p><a href="{% url 'book_view'  pk=purchase.book.pk %}">{{ purchase.book.book_name }} - {{ purchase.book.description }}</a></p>
-            <script>
-                window.pk = '{{ purchase.book.pk }}';
-            </script>
-            <button id="share">Share with someone</button>
+        <div class="item">
+            <div class="book">
+                <img src="{{ purchase.book.image_url }}" alt="{{ purchase.book.book_name }}" width="200" height="300">
+                <div class="info">
+                    <a href="{% url 'book_view'  pk=purchase.book.pk %}">{{ purchase.book.book_name }}</a>
+                    <p>Description: {{purchase.book.description}}</p>
+                    <script>
+                        window.pk = '{{ purchase.book.pk }}';
+                    </script>
+                    <button id="share">Share with someone</button>
+                </div>
+            </div>
         </div>
     {% endfor %}
 </div>
