--- a/ourbooks/static/ourbooks/header.css
+++ b/ourbooks/static/ourbooks/header.css
@@ -6,7 +6,9 @@ body {
     display: flex;
     flex-direction: row;
     background-color: #FFF5FF;
-    margin-left: 10px;
+    padding: 0;
+    margin: 0;
+    width: 100%;
   }
   
   .header-title {
@@ -19,6 +21,10 @@ body {
     margin-left: 30px;
     align-items: center;
     justify-content: center;
+  }
+
+  .header-content img{
+    max-width: 600px;
   }
   
   .header-greet {
