--- a/ourbooks/templates/header.html
+++ b/ourbooks/templates/header.html
@@ -3,9 +3,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'ourbooks/header.css' %}">
 
 <div class="header">
-  <div class="header-content">
-    <h1 class="header-title">OurBooks</h1>
-  </div>
+    <img src="{% static '/ourbooks.jpg' %}" alt="" width="100%" height="200">
 </div>
 {% block head %}
 {% endblock %}
