--- a/readers/templates/readers/edit_review.html
+++ b/readers/templates/readers/edit_review.html
@@ -1,3 +1,8 @@
+{% extends "readers/reader-header.html" %}
+{% load static %}
+
+
+{% block content %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,3 +17,4 @@
     <a href="{% url 'my-reviews' %}">Cancelar</a>
 </body>
 </html>
+{% endblock %}
