--- a/readers/templates/readers/my-reviews.html
+++ b/readers/templates/readers/my-reviews.html
@@ -1,5 +1,9 @@
+{% extends "readers/reader-header.html" %}
+{% load static %}
+
+{% block content %} 
  <div class="my-reviews">
-    <h2>Mis Reseñas</h2>
+    <h2>My Reviews</h2>
     {% if page_obj.has_other_pages %}
         <div class="pagination">
             <!-- Controles de paginación -->
@@ -10,15 +14,15 @@
     {% for review in page_obj %}
     <div class="review">
         <p><strong>Book name:</strong> {{ review.book.book_name }}</p>
-        <p><strong>rating:</strong> {{ review.rating }}</p>
-        <p><strong>comment:</strong> {{ review.comment }}</p>
-        <p><strong>date</strong> {{ review.date }}</p>
+        <p><strong>Rating:</strong> {{ review.rating }}</p>
+        <p><strong>Comment:</strong> {{ review.comment }}</p>
+        <p><strong>Date</strong> {{ review.date }}</p>
         <!-- Botones de acción -->
         <a href="{% url 'edit_review' review.pk %}">Editar</a>
         <a href="{% url 'delete_review' review.pk %}">Borrar</a>
     </div>
 {% empty %}
-    <p>Aún no has escrito ninguna reseña.</p>
+    <p>A review hasn't been written.</p>
 {% endfor %}
     {% if page_obj.has_other_pages %}
         <div class="pagination">
@@ -28,3 +32,4 @@
     {% endif %}
 </div>
 
+{% endblock %}
