--- a/readers/templates/readers/reader-header.html
+++ b/readers/templates/readers/reader-header.html
@@ -1,14 +1,27 @@
 {% extends "header.html" %}
 {% load static %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'readers/reader-home.css' %}">
+
 {% block head %}
-<a href="{% url 'reader_home' %}">Home</a>
-<a href="{% url 'my_books' %}">My books</a>
-<a href="{% url 'shared_with_me' %}">Shared with me</a>
-<a href="{% url 'my-reviews' %}">My Reviews</a>
-<a href="{% url 'profile_view' %}">Profile</a>
-<a href="{% url 'logout' %}">Logout</a>
+<link rel="stylesheet" type="text/css" href="{% static 'readers/reader-home.css' %}">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href='https://unpkg.com/css.gg@2.0.0/icons/css/readme.css' rel='stylesheet'>
+<div class="reader-botons">
+    <a href="{% url 'reader_home' %}" class="homeb">
+        <i class="fa fa-home"></i>
+        Home
+    </a>
+    <a href="{% url 'my_books' %}" class="mybooksb">
+        My Books
+    </a>
+    <a href="{% url 'shared_with_me' %}" class="sharedwmb">Shared with me</a>
+    <a href="{% url 'my-reviews' %}" class="myrevb">My Reviews</a>
+    <a href="{% url 'profile_view' %}" class="profileb">Profile</a>
+    <a href="{% url 'logout' %}" class="logout">Logout</a>
+</div>
+
 {% endblock %}
 
 {% block content %}
